--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -I.
-DEPS = fsmServidor.h arquivo.h pacote.h tp_socket.h
-OBJ = server.o fsmServidor.o arquivo.o pacote.o tp_socket.o
+DEPS = fsmServidor.h arquivo.h pacote.h transacao.h tp_socket.h
+OBJ = server.o fsmServidor.o arquivo.o pacote.o transacao.o tp_socket.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
