Reestruturação dos diretórios, separação dos Makefiles, implementação da fsm do cliente

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,17 @@
 CC = gcc
 CFLAGS = -Wall -I.
-DEPS = fsmServidor.h arquivo.h pacote.h transacao.h tp_socket.h
-OBJ = server.o fsmServidor.o arquivo.o pacote.o transacao.o tp_socket.o
+DEPS = fsmServidor.h fsmCliente.h arquivo.h pacote.h transacao.h tp_socket.h
+OBJ = server.o client.o fsmServidor.o fsmCliente.o arquivo.o pacote.o transacao.o tp_socket.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
+all: server client
+
 server: $(OBJ)
+	gcc -o $@ $^ $(CFLAGS)
+
+client: $(OBJ)
 	gcc -o $@ $^ $(CFLAGS)
 
 testes:
