criação de makefile geral e scripts para rodar binários com os parametros

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,22 +1,20 @@
-CC = gcc
-CFLAGS = -Wall -I.
-DEPS = fsmServidor.h fsmCliente.h arquivo.h pacote.h transacao.h tp_socket.h
-OBJ = server.o client.o fsmServidor.o fsmCliente.o arquivo.o pacote.o transacao.o tp_socket.o
+DIRS=${wildcard *}
 
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+all:
+	@for i in ${DIRS};                  \
+	 do                                 \
+	     if [ -f $${i}/Makefile ];      \
+	     then                           \
+	         make -C $${i} || exit $$?; \
+	     fi;                            \
+	 done
 
-all: server client
-
-server: $(OBJ)
-	gcc -o $@ $^ $(CFLAGS)
-
-client: $(OBJ)
-	gcc -o $@ $^ $(CFLAGS)
-
-testes:
-	gcc -o testePacote testePacote.c pacote.c  
-	gcc -o testeArquivo testeArquivo.c arquivo.c  
-
-clean: 
-	@rm -f *.o server testePacote testeArquivo
+clean:
+	@for i in ${DIRS};             \
+	 do                            \
+	     if [ -f $${i}/Makefile ]; \
+	     then                      \
+	         make -C $${i} clean;  \
+	     fi;                       \
+	 done
+	@rm -f ${wildcard *~} __dummy__
