--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -2,8 +2,8 @@ CC = gcc
 INC_DIR = ../commom/
 CFLAGS = -Wall -I$(INC_DIR) -g
 
-DEPS = fsmCliente.h arquivo.h pacote.h transacao.h tp_socket.h
-OBJ = client.o fsmCliente.o $(addprefix $(INC_DIR), arquivo.o pacote.o transacao.o tp_socket.o)
+DEPS = fsmCliente.h arquivo.h pacote.h transacao.h crc.h tp_socket.h
+OBJ = client.o fsmCliente.o $(addprefix $(INC_DIR), arquivo.o pacote.o transacao.o crc.o tp_socket.o)
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
